fd-portal/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fd-portal
  namespace: fd-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fd-portal
  template:
    metadata:
      labels:
        app: fd-portal
    spec:
      containers:
        - name: fd-portal
          image: tomtek/fd-portal:013
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true

      volumes:
        - name: tls
          secret:
            secretName: fd-portal-tls-pem
